# legallens-openenv

./: Dockerfile  README.md  __init__.py  app.py  baseline_agent.py  environment.py  grader.py  inference.py  knowledge_base.py  openenv.yaml  pyproject.toml  requirements.txt  setup.py  task_definitions.py
legallens_openenv/: client.py  environment.py  grader.py  models.py
mnt/user-data/outputs/tasks/: __init__.py
server/: __init__.py  app.py
tasks/: task_definitions.py
