[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legallens-openenv"
version = "1.0.0"
description = "LegalLens AI Indian Legal Problem Analyzer OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Adammyya"}]
keywords = ["openenv", "legal", "india", "law"]

dependencies = [
    "openenv-core>=0.2.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
]

[project.scripts]
openenv-server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*", "laws*", "tasks*"]

[tool.openenv]
name = "LegalLensEnv"
version = "1.0.0"
entry_point = "server.app:app"
inference_script = "inference.py"
tasks = ["task_1_easy", "task_2_medium", "task_3_hard"]
deploy_mode = ["docker", "huggingface"]